; ModuleID = '/home/carl/AnghaBench/jq/src/extr_execute.c_frame_size.c'
source_filename = "/home/carl/AnghaBench/jq/src/extr_execute.c_frame_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bytecode = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.bytecode*)* @frame_size to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @frame_size(%struct.bytecode* %0) #0 {
  %2 = alloca %struct.bytecode*, align 8
  store %struct.bytecode* %0, %struct.bytecode** %2, align 8
  %3 = load %struct.bytecode*, %struct.bytecode** %2, align 8
  %4 = getelementptr inbounds %struct.bytecode, %struct.bytecode* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = load %struct.bytecode*, %struct.bytecode** %2, align 8
  %7 = getelementptr inbounds %struct.bytecode, %struct.bytecode* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  %9 = add nsw i32 %5, %8
  %10 = sext i32 %9 to i64
  %11 = mul i64 4, %10
  %12 = add i64 4, %11
  %13 = trunc i64 %12 to i32
  ret i32 %13
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
